trigger: force Azure Static Web Apps rebuild for SPA routing

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#00BCD4" />
+    <!-- Force rebuild -->
     <meta
       name="description"
       content="UK-Based Payroll Migration Specialists for Seamless Global Transitions. Expert payroll migration services with zero downtime guarantee."
